Software closes when a processing marker is deleted #67012

Closed
opened 2019-07-15 20:23:57 +02:00 by Danilo · 12 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 750/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 388.13

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-11 13:50, hash: 06312c6d2d
Worked: (optional)

Short description of error
The software will close when you delete a marker while it has been tracked on motion tracking.

Exact steps for others to reproduce the error

  • Create a big marker on motion tracking to take some time to process.
  • Click on it and then click on "Track Markers"
  • Press "Delete" and click on "Delete Track"
  • Now Blender will close instantaneously.
**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 750/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 388.13 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-11 13:50, hash: `06312c6d2d` Worked: (optional) **Short description of error** The software will close when you delete a marker while it has been tracked on motion tracking. **Exact steps for others to reproduce the error** - Create a big marker on motion tracking to take some time to process. - Click on it and then click on "Track Markers" - Press "Delete" and click on "Delete Track" - Now Blender will close instantaneously.
Author

Added subscriber: @danilolc

Added subscriber: @danilolc

Added subscriber: @ZedDB

Added subscriber: @ZedDB

Does this still happen with the latest blender beta and nvidia drivers?

Does this still happen with the latest blender beta and nvidia drivers?

Added subscribers: @Sergey, @brecht

Added subscribers: @Sergey, @brecht

I doubt this is related to graphics drivers, probably it's deleting data that the tracking is using in another thread.

I doubt this is related to graphics drivers, probably it's deleting data that the tracking is using in another thread.

I know, I'm just eliminating any other factor in the small chance that they were the issue.

I know, I'm just eliminating any other factor in the small chance that they were the issue.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm here, checking...

Can confirm here, checking...
Member

crash on framenr < track->markers- [x].framenr, where track->markers is garbled... will check with ASAN...

1  BKE_tracking_marker_get                                    tracking.c           1339 0x1fd0999      
2  BKE_tracking_marker_get_exact                              tracking.c           1380 0x1fd0b33      
3  accessor_get_mask_for_track_callback                       tracking_util.c      940  0x1fdb012      
4  (anonymous namespace)::LibmvFrameAccessor::GetMaskForTrack frame_accessor.cc    120  0x31c8e3a      
5  mv::(anonymous namespace)::GetMaskForMarker                autotrack.cc         118  0x31d1775      
6  mv::AutoTrack::TrackMarker                                 autotrack.cc         164  0x31d19bc      
7  libmv_autoTrackMarker                                      autotrack.cc         63   0x31c5012      
8  autotrack_context_step_cb                                  tracking_auto.c      424  0x30944ab      
9  parallel_range_single_thread                               task.c               1103 0x20fc958      
10 BLI_task_parallel_range                                    task.c               1147 0x20fcb33      
11 BKE_autotrack_context_step                                 tracking_auto.c      452  0x30945ec      
12 track_markers_startjob                                     tracking_ops_track.c 233  0x2da19e6      
13 do_job_thread                                              wm_jobs.c            383  0x23e16b2      
14 tslot_thread_start                                         threads.c            260  0x20fd5f0      
15 start_thread                                                                         0x7ffff488b5a2 
16 clone                                                                                0x7ffff1c1f303 
crash on `framenr < track->markers- [x].framenr`, where `track->markers` is garbled... will check with ASAN... ``` 1 BKE_tracking_marker_get tracking.c 1339 0x1fd0999 2 BKE_tracking_marker_get_exact tracking.c 1380 0x1fd0b33 3 accessor_get_mask_for_track_callback tracking_util.c 940 0x1fdb012 4 (anonymous namespace)::LibmvFrameAccessor::GetMaskForTrack frame_accessor.cc 120 0x31c8e3a 5 mv::(anonymous namespace)::GetMaskForMarker autotrack.cc 118 0x31d1775 6 mv::AutoTrack::TrackMarker autotrack.cc 164 0x31d19bc 7 libmv_autoTrackMarker autotrack.cc 63 0x31c5012 8 autotrack_context_step_cb tracking_auto.c 424 0x30944ab 9 parallel_range_single_thread task.c 1103 0x20fc958 10 BLI_task_parallel_range task.c 1147 0x20fcb33 11 BKE_autotrack_context_step tracking_auto.c 452 0x30945ec 12 track_markers_startjob tracking_ops_track.c 233 0x2da19e6 13 do_job_thread wm_jobs.c 383 0x23e16b2 14 tslot_thread_start threads.c 260 0x20fd5f0 15 start_thread 0x7ffff488b5a2 16 clone 0x7ffff1c1f303 ```
Sergey Sharybin self-assigned this 2019-07-17 12:28:05 +02:00

This is a missing check for the track in the movie clip being still available when synchronizing tracking data from Libmv to Blender.

This is a missing check for the track in the movie clip being still available when synchronizing tracking data from Libmv to Blender.

This issue was referenced by 592a3d7b47

This issue was referenced by 592a3d7b4771c8d329d586e8bfa776b25666921b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#67012
No description provided.